# companion-hivemind

./: .env  Cargo.toml  Dockerfile  LICENSE
migrations/: 001_init.sql  002_auth_tokens_token_text.sql  003_knowledge_documents.sql
src/: config.rs  errors.rs  main.rs  middleware.rs  router.rs  types.rs  util.rs
src/api/: mod.rs
src/db/: mod.rs  models.rs
src/handlers/: api_key.rs  auth.rs  company.rs  invite.rs  knowledge.rs  meeting.rs  member.rs  message.rs  mod.rs  session.rs  trace.rs  usage.rs  vexa.rs
src/repos/: api_key.rs  auth.rs  company.rs  invite.rs  knowledge.rs  meeting.rs  member.rs  message.rs  mod.rs  session.rs  trace.rs  usage.rs
src/services/: auth.rs  crypto.rs  embedding.rs  knowledge.rs  mod.rs  pdf.rs  vector.rs
