[package]
name = "companion-hivemind"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
bcrypt = "0.16"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
config = { version = "0.14", features = ["toml"] }
aes-gcm = "0.10"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"

# langchain-rust + qdrant
langchain-rust = { package = "langchain-rust-openrouter", git = "https://github.com/coolcmyk/langchain-rust-openrouter", features = ["qdrant"] }
qdrant-client = "=1.10.1"
async-trait = "0.1"
futures = "0.3"
